src/objects/Payment_Adjustments__c.object
<CustomObject>
    <description>Meta data about Adjustment and Payment Transactions</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_Group_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Charge Group</label>
        <referenceTo>Charge_Group__c</referenceTo>
        <relationshipLabel>Payments / Adjustments</relationshipLabel>
        <relationshipName>Payment_Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Custom_Name__c</fullName>
        <formula>Payor__r.Name &amp; &apos; &apos; &amp; UPPER(LEFT(Transaction_Type__r.Name, 1)) + LOWER(RIGHT(Transaction_Type__r.Name, LEN(Transaction_Type__r.Name)-1)) &amp; &apos; - &apos; &amp;  TEXT(MONTH(Post_Date__c))+&quot;/&quot; +TEXT(DAY(Post_Date__c))+&quot;/&quot; +TEXT(YEAR(Post_Date__c))</formula>
        <label>Custom Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Export_Date__c</fullName>
        <label>Export Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <externalId>true</externalId>
        <label>Sirono ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Imported__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Imported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Origin_Code__c</fullName>
        <label>Origin Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment</label>
        <referenceTo>Payment__c</referenceTo>
        <relationshipName>Payment_Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payor_ID__c</fullName>
        <label>Payor ID</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payor</label>
        <referenceTo>Payor__c</referenceTo>
        <relationshipLabel>Payments / Adjustments</relationshipLabel>
        <relationshipName>Payments_Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Post_Date__c</fullName>
        <label>Post Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Code</label>
        <referenceTo>Transaction_Type__c</referenceTo>
        <relationshipLabel>Payments / Adjustments</relationshipLabel>
        <relationshipName>Payments_Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>Transaction__c</referenceTo>
        <relationshipName>Payment_Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Payment / Adjustment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payments / Adjustments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>